Se agregaron las vistas de administrador

--- a/app/src/main/res/layout/list_item_incio_admin.xml
+++ b/app/src/main/res/layout/list_item_incio_admin.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/Carview"
+        android:id="@+id/Carview2"
         android:layout_width="132dp"
         android:layout_height="170dp"
         android:layout_marginTop="16dp"
