--- a/app/src/main/res/layout/inicio_administrador.xml
+++ b/app/src/main/res/layout/inicio_administrador.xml
@@ -19,11 +19,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="340dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="19dp"
         app:srcCompat="@drawable/options" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerAdmin"
+        android:id="@+id/recyclerlistadoClientesAdmin"
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_alignParentTop="true"
