--- a/app/src/main/res/layout/actualizar_cliente_admin.xml
+++ b/app/src/main/res/layout/actualizar_cliente_admin.xml
@@ -16,16 +16,6 @@
         android:layout_height="match_parent" />
 
     <ImageView
-        android:id="@+id/options"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="341dp"
-        android:layout_marginTop="4dp"
-        app:srcCompat="@drawable/back" />
-
-    <ImageView
         android:id="@+id/imageView4"
         android:layout_width="330dp"
         android:layout_height="10dp"
@@ -38,7 +28,7 @@
         app:srcCompat="@drawable/vectangle" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvConsultar"
         android:layout_width="239dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
