--- a/app/src/main/res/layout/confirmar_pin.xml
+++ b/app/src/main/res/layout/confirmar_pin.xml
@@ -6,21 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ConsultarClienteAdmin">
 
-        <include
-            layout="@layout/vista_reutilizar"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+    <include
+        layout="@layout/vista_reutilizar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" />
 
-
-        <ImageView
-            android:id="@+id/options"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="341dp"
-            android:layout_marginTop="4dp"
-            app:srcCompat="@drawable/back" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -36,37 +26,40 @@
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvConsultar"
         android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="66dp"
-        android:layout_marginEnd="68dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="139dp"
+        android:layout_marginEnd="69dp"
         android:layout_marginBottom="560dp"
-        android:text="Consultar cliente"
+        android:hint="Ingrese su pin"
         android:textAlignment="center"
+        android:textColorHint="@color/black"
         android:textSize="24sp"
         android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-            android:id="@+id/numerocedulaConsultar"
+        android:id="@+id/numerocedulaConsultar"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="60dp"
+        android:layout_marginTop="258dp"
+        android:hint="PIN">
+
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="60dp"
-            android:layout_marginTop="258dp"
-            android:hint="Numero de cedula a consultar">
+            android:inputType="number"
+            android:textAlignment="viewStart"
+            android:textStyle="bold" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:textAlignment="viewStart"
-                android:textStyle="bold" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
 
