--- a/app/src/main/res/layout/listado_clientes_admin.xml
+++ b/app/src/main/res/layout/listado_clientes_admin.xml
@@ -13,16 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
-    <ImageView
-        android:id="@+id/options"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="341dp"
-        android:layout_marginTop="4dp"
-        app:srcCompat="@drawable/back" />
-
 
     <ImageView
         android:id="@+id/imageView4"
@@ -32,18 +22,20 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="11dp"
-        android:layout_marginTop="87dp"
+        android:layout_marginTop="85dp"
         android:layout_marginEnd="192dp"
         app:srcCompat="@drawable/vectangle" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvConsultar"
         android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="13dp"
+        android:layout_marginTop="49dp"
         android:layout_marginEnd="120dp"
         android:layout_marginBottom="655dp"
         android:text="Listado clientes"
@@ -55,11 +47,11 @@
         android:id="@+id/numerNITConsultar"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_width="600dp"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="100dp"
         android:layout_marginStart="10dp"
         app:startIconDrawable="@drawable/search"
         android:layout_marginEnd="50dp"
@@ -82,9 +74,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="164dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="77dp" />
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="61dp" />
 
 
 </RelativeLayout>
