--- a/app/src/main/res/layout/listado_corresponsales_admin.xml
+++ b/app/src/main/res/layout/listado_corresponsales_admin.xml
@@ -13,15 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
-    <ImageView
-        android:id="@+id/options"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="341dp"
-        android:layout_marginTop="4dp"
-        app:srcCompat="@drawable/back" />
 
 
     <ImageView
@@ -37,17 +28,20 @@
         app:srcCompat="@drawable/vectangle" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvConsultar"
         android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="13dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="120dp"
         android:layout_marginBottom="655dp"
-        android:text="Listado corresponsales"
+        android:hint="@string/listadoCorresponsal"
         android:textAlignment="viewStart"
+        android:textColorHint="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -55,11 +49,11 @@
         android:id="@+id/numerNITConsultar"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_width="600dp"
-        android:layout_height="40dp"
+        android:layout_height="70dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="90dp"
         android:layout_marginStart="10dp"
         app:startIconDrawable="@drawable/search"
         android:layout_marginEnd="50dp"
