--- a/app/src/main/res/layout/vista_reutilizar.xml
+++ b/app/src/main/res/layout/vista_reutilizar.xml
@@ -34,4 +34,15 @@
         android:layout_marginBottom="-69dp"
         app:srcCompat="@drawable/bttonrectangle" />
 
+
+    <ImageView
+        android:id="@+id/volveritem"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="341dp"
+        android:layout_marginTop="4dp"
+        app:srcCompat="@drawable/back" />
+
 </RelativeLayout>
