--- a/app/src/main/res/layout/confirmar_pin_clienrte.xml
+++ b/app/src/main/res/layout/confirmar_pin_clienrte.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ConsultarClienteAdmin">
 
+
     <include
         layout="@layout/vista_reutilizar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
-
 
     <ImageView
         android:id="@+id/imageView4"
@@ -26,16 +26,16 @@
 
 
     <TextView
-        android:id="@+id/tvConsultar"
-        android:layout_width="277dp"
+        android:id="@+id/tvIngresarPin"
+        android:layout_width="321dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="65dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="139dp"
-        android:layout_marginEnd="69dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="560dp"
         android:hint="Ingrese su pin"
         android:textAlignment="center"
@@ -44,7 +44,7 @@
         android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/numerocedulaConsultar"
+        android:id="@+id/numeroPinConfirmar"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -64,35 +64,35 @@
 
 
 
-        <LinearLayout
-            android:layout_width="400dp"
+    <LinearLayout
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="430dp"
+        android:orientation="horizontal">
+
+
+        <Button
+            android:id="@+id/btnConfirmaDatosCliente"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="430dp"
-            android:orientation="horizontal">
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="25dp"
+            android:background="@color/colorlayoutinputs"
+            android:text="Confirmar"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/btnCancelarDatosCliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:background="@color/colorlayoutinputs"
+            android:text="Cancelar"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/btnConfirmarCorresponsal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="25dp"
-                android:background="@color/colorlayoutinputs"
-                android:text="Confirmar"
-                android:textSize="18dp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/btnCancelarCorresponsal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:background="@color/colorlayoutinputs"
-                android:text="Cancelar"
-                android:textSize="18dp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
