--- a/app/src/main/res/layout/consultar_admin.xml
+++ b/app/src/main/res/layout/consultar_admin.xml
@@ -26,7 +26,7 @@
 
 
     <TextView
-        android:id="@+id/tvConsultar"
+        android:id="@+id/tvIngresarPin"
         android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -71,7 +71,7 @@
 
 
             <Button
-                android:id="@+id/btnConfirmarCorresponsal"
+                android:id="@+id/btnConfirmaDatosCliente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="60dp"
@@ -82,7 +82,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/btnCancelarCorresponsal"
+                android:id="@+id/btnCancelarDatosCliente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
