--- a/app/src/main/res/layout/crear_cliente.xml
+++ b/app/src/main/res/layout/crear_cliente.xml
@@ -28,7 +28,7 @@
         app:srcCompat="@drawable/vectangle" />
 
     <TextView
-        android:id="@+id/tvConsultar"
+        android:id="@+id/tvIngresarPin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
