--- a/app/src/main/res/layout/listado_clientes_admin.xml
+++ b/app/src/main/res/layout/listado_clientes_admin.xml
@@ -27,7 +27,7 @@
         app:srcCompat="@drawable/vectangle" />
 
     <TextView
-        android:id="@+id/tvConsultar"
+        android:id="@+id/tvIngresarPin"
         android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
