--- a/app/src/main/res/layout/registrar_corresponal_admin.xml
+++ b/app/src/main/res/layout/registrar_corresponal_admin.xml
@@ -13,7 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
-
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="330dp"
@@ -27,18 +26,19 @@
         app:srcCompat="@drawable/vectangle" />
 
     <TextView
-        android:layout_width="277dp"
+        android:id="@+id/tvRegisActualizarCliente"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="110dp"
-        android:layout_marginEnd="65dp"
-        android:layout_marginBottom="589dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="103dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="596dp"
         android:hint="@string/registrarCorresponsal"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textColorHint="@color/black"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -130,7 +130,7 @@
 
 
         <Button
-            android:id="@+id/btnConfirmarCorresponsal"
+            android:id="@+id/btnConfirmaDatosCliente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
@@ -141,7 +141,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/btnCancelarCorresponsal"
+            android:id="@+id/btnCancelarDatosCliente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
