--- a/app/src/main/res/layout/alertcancel.xml
+++ b/app/src/main/res/layout/alertcancel.xml
@@ -41,21 +41,21 @@
 
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="41dp"
+        android:id="@+id/tvAlertCancel"
+        android:layout_width="307dp"
+        android:layout_height="111dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="77dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="497dp"
-        android:text="Accion cancelada"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="471dp"
         android:textAlignment="center"
         android:textSize="25dp"
         android:textStyle="bold" />
 
     <Button
+        android:id="@+id/btnSalirCancelAlert"
         android:layout_width="138dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -67,5 +67,5 @@
         android:hint="Salir"
         android:textColorHint="@color/white"
         android:textSize="20dp"
-        android:textStyle="bold" />
+        android:fontFamily="@font/ubuntumedium"/>
 </RelativeLayout>
