--- a/app/src/main/res/layout/confirmar_datos_corresponsal.xml
+++ b/app/src/main/res/layout/confirmar_datos_corresponsal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConfirmarDatosCorresponsal">
+    tools:context=".ViewsAdmin.ConfirmarDatosCorresponsal">
 
 
     <include
@@ -28,20 +28,20 @@
     <TextView
         android:id="@+id/tvConfirmarCorresponsal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="132dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginBottom="557dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="138dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="562dp"
         android:text="Confirmar datos correponsal"
         android:textAlignment="center"
         android:textColorHint="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textSize="20sp"
+        android:fontFamily="@font/ubuntumedium"/>
 
     <LinearLayout
         android:layout_width="400dp"
@@ -58,6 +58,7 @@
             android:layout_marginLeft="60dp"
             android:layout_marginRight="25dp"
             android:background="@color/colorlayoutinputs"
+            android:fontFamily="@font/ubuntumedium"
             android:text="Confirmar"
             android:textSize="18dp"
             android:textStyle="bold" />
@@ -70,6 +71,7 @@
             android:background="@color/colorlayoutinputs"
             android:text="Cancelar"
             android:textSize="18dp"
+            android:fontFamily="@font/ubuntumedium"
             android:textStyle="bold" />
 
     </LinearLayout>
