--- a/app/src/main/res/layout/listado_clientes_admin.xml
+++ b/app/src/main/res/layout/listado_clientes_admin.xml
@@ -5,14 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListadoClientesAdmin">
+    tools:context=".ViewsAdmin.ListadoClientesAdmin">
 
 
     <include
         layout="@layout/vista_reutilizar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
-
 
     <ImageView
         android:id="@+id/imageView4"
@@ -21,9 +20,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="11dp"
         android:layout_marginTop="85dp"
         android:layout_marginEnd="192dp"
+        android:layout_marginBottom="642dp"
         app:srcCompat="@drawable/vectangle" />
 
     <TextView
@@ -43,28 +44,6 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/numerNITConsultar"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-        android:layout_width="600dp"
-        android:layout_height="60dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginStart="10dp"
-        app:startIconDrawable="@drawable/search"
-        android:layout_marginEnd="50dp"
-        android:hint="Cedula cliente">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:textAlignment="viewStart"
-            android:textStyle="bold" />
-
-    </com.google.android.material.textfield.TextInputLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -78,5 +57,28 @@
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="61dp" />
 
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/numerNITConsultar"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+        android:layout_width="354dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="99dp"
+        android:layout_marginEnd="47dp"
+        android:hint="Cedula cliente"
+        app:startIconDrawable="@drawable/search">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="344dp"
+            android:layout_height="53dp"
+            android:inputType="number"
+            android:textAlignment="viewStart"
+            android:textStyle="bold" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 </RelativeLayout>
