--- a/app/src/main/res/layout/alertconfirm.xml
+++ b/app/src/main/res/layout/alertconfirm.xml
@@ -39,25 +39,26 @@
         android:layout_marginBottom="299dp"
         app:srcCompat="@drawable/approve" />
 
+
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="253dp"
-        android:layout_height="62dp"
+        android:id="@+id/tvAlertConfirm"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="79dp"
-        android:layout_marginTop="196dp"
-        android:layout_marginEnd="79dp"
-        android:layout_marginBottom="473dp"
-        android:text="Realizado correctamente"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="183dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="468dp"
+        android:fontFamily="@font/ubuntumedium"
         android:textAlignment="center"
         android:textSize="25dp"
         android:textStyle="bold" />
 
-
     <Button
+        android:id="@+id/btnSalirAlertConfirm"
         android:layout_width="138dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -66,6 +67,7 @@
         android:layout_marginStart="136dp"
         android:layout_marginEnd="137dp"
         android:layout_marginBottom="148dp"
+        android:fontFamily="@font/ubuntumedium"
         android:hint="Salir"
         android:textColorHint="@color/white"
         android:textSize="20dp"
