--- a/app/src/main/res/layout/crear_cliente.xml
+++ b/app/src/main/res/layout/crear_cliente.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".CrearClienteAdmin"
+    tools:context=".ViewsAdmin.CrearClienteAdmin"
     android:orientation="horizontal">
 
 
@@ -43,7 +43,7 @@
         android:textAlignment="center"
         android:textColorHint="@color/black"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:fontFamily="@font/ubuntumedium" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nombrecrearcliente"
