--- a/app/src/main/res/layout/inicio_administrador.xml
+++ b/app/src/main/res/layout/inicio_administrador.xml
@@ -39,14 +39,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginEnd="185dp"
-        android:layout_marginBottom="656dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="186dp"
+        android:layout_marginBottom="655dp"
         android:hint="@string/nombreAdmin"
-        android:textColorHint="#FF5F58"
         android:textColor="#FF5F58"
+        android:textColorHint="#FF5F58"
         android:textSize="25dp"
-        android:textStyle="bold" />
+        android:fontFamily="@font/ubuntumedium"/>
 
 
 </RelativeLayout>
