--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginMain">
+    tools:context=".ViewsAdmin.LoginMain">
 
     <ImageView
         android:id="@+id/imageView"
