Integrando el callback

--- a/app/src/main/res/layout/alertcancel.xml
+++ b/app/src/main/res/layout/alertcancel.xml
@@ -64,8 +64,8 @@
         android:layout_marginStart="140dp"
         android:layout_marginEnd="132dp"
         android:layout_marginBottom="150dp"
+        android:fontFamily="@font/ubuntumedium"
         android:hint="Salir"
         android:textColorHint="@color/white"
-        android:textSize="20dp"
-        android:fontFamily="@font/ubuntumedium"/>
+        android:textSize="20dp" />
 </RelativeLayout>
