--- a/app/src/main/res/layout/consultar_admin.xml
+++ b/app/src/main/res/layout/consultar_admin.xml
@@ -26,7 +26,7 @@
 
 
     <TextView
-        android:id="@+id/tvIngresarPin"
+        android:id="@+id/tvConsultaAdmin"
         android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -83,7 +83,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/btnCancelarDatosCliente"
+                android:id="@+id/btnCancelarConsulta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
