Vista administrador implementada con callback y MVP

--- a/app/src/main/res/layout/confirmar_datos_cliente.xml
+++ b/app/src/main/res/layout/confirmar_datos_cliente.xml
@@ -37,11 +37,11 @@
         android:layout_marginTop="139dp"
         android:layout_marginEnd="69dp"
         android:layout_marginBottom="560dp"
+        android:fontFamily="@font/ubuntumedium"
         android:text="Confirmar datos cliente"
         android:textAlignment="center"
         android:textColorHint="@color/black"
-        android:textSize="24sp"
-        android:fontFamily="@font/ubuntumedium"/>
+        android:textSize="24sp" />
 
 
     <LinearLayout
