--- a/app/src/main/res/layout/confirmar_pin_cliente.xml
+++ b/app/src/main/res/layout/confirmar_pin_cliente.xml
@@ -37,11 +37,11 @@
         android:layout_marginTop="139dp"
         android:layout_marginEnd="52dp"
         android:layout_marginBottom="560dp"
+        android:fontFamily="@font/ubuntumedium"
         android:hint="Ingrese su pin"
         android:textAlignment="center"
         android:textColorHint="@color/black"
-        android:textSize="24sp"
-        android:fontFamily="@font/ubuntumedium"/>
+        android:textSize="24sp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/numeroPinConfirmar"
@@ -90,10 +90,10 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:background="@color/colorlayoutinputs"
+            android:fontFamily="@font/ubuntumedium"
             android:text="Cancelar"
             android:textSize="19dp"
-            android:textStyle="bold"
-            android:fontFamily="@font/ubuntumedium"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
